<resources>
    <string name="app_name">Ride Share</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="senderId">237817979464</string>

    <string name="google_sign_in_key">237817979464-tr38ehl0emlb8nvvncj4aldp7tb67uho.apps.googleusercontent.com</string>

    <string name="facebook_app_id">258005881343253</string>
    <string name="fb_login_protocol_scheme">fb258005881343253</string>

    <string name="phone_or_email">PHONE NUMBER OR EMAIL</string>
    <string name="password">PASSWORD</string>

    <string name="forgotpassword">Forgot your login details?</string>
    <string name="account">Don\'t have an account? Sign Up</string>

    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="mobile">MOBILE NUMBER</string>
    <string name="signup">Sign Up</string>

    <string name="authentication_sent">An authentication code will sent your mobile</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ride_rate">Rate Your Ride</string>
    <string name="ride_rate_msg">Select Stars and Give Your FeedBack</string>
    <string name="ride_rate_comment">Please write your comment here.....</string>
    <string name="ride_rate_wordcount">0</string>
    <string name="ride_rate_totalwords">/500</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_name">Name</string>
    <string name="user_lname">Last Name</string>
    <string name="user_role">User Role</string>
    <string name="approve_req">Approve (Driver Request)</string>
    <string name="disable">Disable</string>
    <string name="approve_privilege">Approve (Admin Privilege)</string>
    <string name="admin_apply">Apply</string>
    <string name="choose_group_text">Choose Group</string>
    <string name="create_group_text">CREATE GROUP</string>
    <string name="group_name">GROUP NAME</string>
    <string name="group_create">CREATE</string>
    <string name="group_cancel">CANCEL</string>
    <string name="btn_create">Create</string>
    <string name="btn_cancle">Cancel</string>
    <string name="rider_ratings">Ratings : </string>
    <string name="driver_details">Driver details</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_ph_no">Phone Number</string>

    <!--Rider Privileges-->
    <string name="vehicle_privileges">Driver Privileges</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_passengers">Max passengers</string>
</resources>
