<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_bg"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="4dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:padding="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/squar_re"
                android:layout_marginTop="@dimen/_15sdp"
                android:theme="@style/TextLabel1"
                app:hintTextAppearance="@style/TextLabelsize">

                <EditText
                    android:id="@+id/first_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_14sdp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_name_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name_tl"
                android:layout_marginTop="@dimen/_15sdp"
                android:theme="@style/TextLabel1"
                app:hintTextAppearance="@style/TextLabelsize">

                <EditText
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_14sdp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name_tl"
                android:layout_marginTop="@dimen/_15sdp"
                android:theme="@style/TextLabel1"
                app:hintTextAppearance="@style/TextLabelsize">

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_14sdp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobile_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_tl"
                android:layout_marginTop="@dimen/_15sdp"
                android:theme="@style/TextLabel1"
                app:hintTextAppearance="@style/TextLabelsize">

                <EditText
                    android:id="@+id/mobile_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_14sdp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/authentication_sent_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="right"
                android:text="@string/authentication_sent"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_11sdp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobile_tl"
                android:layout_marginTop="@dimen/_15sdp"
                android:theme="@style/TextLabel1"
                app:hintTextAppearance="@style/TextLabelsize">

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_14sdp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_password_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_tl"
                android:layout_marginTop="@dimen/_15sdp"
                android:theme="@style/TextLabel1"
                app:hintTextAppearance="@style/TextLabelsize">

                <EditText
                    android:id="@+id/confirm_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_14sdp" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/signup_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_below="@+id/confirm_password_tl"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/btn_login"
                android:gravity="center"
                android:lineSpacingExtra="1.2dp"
                android:text="@string/signup"
                android:textColor="@color/blacltext"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
