<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F9FB">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/banner" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circularImageView"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="44dp"
        android:src="@drawable/banner"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circularImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_3sdp"
        android:text="Rider"
        android:textColor="@color/blacltext"
        android:textSize="@dimen/_16sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username_tv"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/squar_re"
            android:layout_marginTop="@dimen/_5sdp"
            android:theme="@style/TextLabel"
            app:hintTextAppearance="@style/TextLabelsize">

            <EditText
                android:id="@+id/first_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textEmailAddress"
                android:textColor="@color/blacltext"
                android:textSize="@dimen/_14sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name_tl"
            android:theme="@style/TextLabel"
            app:hintTextAppearance="@style/TextLabelsize">

            <EditText
                android:id="@+id/last_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textEmailAddress"
                android:textColor="@color/blacltext"
                android:textSize="@dimen/_14sdp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_name_tl"
            android:theme="@style/TextLabel"
            app:hintTextAppearance="@style/TextLabelsize">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/blacltext"
                android:textSize="@dimen/_14sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile_tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_tl"
            android:theme="@style/TextLabel"
            app:hintTextAppearance="@style/TextLabelsize">

            <EditText
                android:id="@+id/mobile_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="textEmailAddress"
                android:textColor="@color/blacltext"
                android:textSize="@dimen/_14sdp" />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_privileges"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/loginbtn"
            android:text="@string/vehicle_privileges" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_8sdp"
            app:srcCompat="@drawable/ic_back_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/save_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/circularImageView"
            android:padding="@dimen/_8sdp"
            android:text="Save"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</RelativeLayout>
